# cstpsi

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  INSTALL.md  NOTICE  README.md  compose.yaml  install.sh  use.txt
app/: README.md  cli.cc  flpsi_experiment.cc  receiver.cc  sender.cc
claims/: README.md
claims/repro-table/: README.md  claim.txt  render_table.py  run.sh
claims/repro-table/expected/: README.md  expected_table.md
demo/: README.md  demo_network.sh  demo_small.sh  demo_split_screen.sh  run_receiver.sh  run_sender.sh
demo/data/: README.md
docker/: README.md  entrypoint.sh
docs/: ARCHITECTURE.md  INSTALL.md  INSTRUMENTATION.md  NETWORK_PROTOCOL.md  PARAMETERS.md
experiments/: README.md  ablation_factors.py  analytical_stlpsi.py  check.py  datagen.py  headtohead_table.py  reproduce.sh  run.sh  summarize.py  verify.py
experiments/configs/: README.md  bench_100k.json  bench_10k.json  bench_1k.json  smoke_1k_N64_k2.json
experiments/lib/: run_cell.sh
infrastructure/: README.txt
parameters/: README.md  demo_1k.json
scripts/: README.md  install_deps.sh  validate_jsonl.py
src/: README.md
src/flpsi/: README.md  flpsi_wrapper.cc  flpsi_wrapper.h
src/gc/: README.md  aes_gc.cc  aes_gc.h  aes_key.h
src/io/: README.md  csv.cc  csv.h  instrumentation.cc  instrumentation.h  io.h  param_loader.cc  param_loader.h
src/network/: README.md  network.cc  network.h  serialization.cc  serialization.h
src/protocol/: README.md  core.cc  helper.cc  helper.h  modpoly.c  modpoly.h  params.cc  params.h  plain.cc  plain.h  receiver.cc  receiver.h  sender.cc  sender.h
tests/: README.md
tests/integration/: README.md  test_csv.cc
tests/unit/: README.md  test_aes_reduction.cc  test_disable_1gc.cc  test_flpsi_wrapper.cc  test_gc_roundtrip.cc  test_multi_token.cc  test_multi_token_arithmetic.cc  test_network_framing.cc  test_param_loader.cc  test_partition_completeness.cc  test_protocol_arithmetic.cc  test_serialization.cc  test_shamir.cc
